# NexCTF

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  Taskfile.yml  compose.dev.yml  compose.yml  roadmap.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
backend/: alembic.ini  pyproject.toml
backend/nexctf/: cli.py  crud.py  enums.py  exceptions.py  main.py  settings.py  worker.py
backend/nexctf/alembic/: env.py  script.py.mako
backend/nexctf/alembic/versions/: 16800b9e9b86_initial_migration.py  a1b2c3d4e5f6_add_email_verified_to_user.py  b4cddbd88179_add_bracket_to_team.py  dc7034f26882_add_allowed_roles_to_oauth_server_.py  e40c10e29caf_add_link_table.py  e4736208aa5d_add_writeup_to_challenges.py
backend/nexctf/api/: dep.py  openapi.py  security.py
backend/nexctf/api/routes/: __init__.py  auth.py  challenge.py  file.py  info.py  me.py  notification.py  oauth_server.py  page.py  plugin.py  scoreboard.py  sse.py
backend/nexctf/api/routes/admin/: __init__.py  category.py  challenge.py  config.py  custom_field.py  email.py  event.py  file.py  hint.py  link.py  notification.py  oauth.py  oauth_client.py  page.py  plugin.py  question.py  scheduler.py  score_adjustment.py  scoreboard.py  solution.py  stats.py  submission.py  tag.py  team.py  user.py
backend/nexctf/core/: appconfig.py  cache.py  captcha.py  config.py  db.py  email.py  email_render.py  rate_limit.py  s3.py
backend/nexctf/fixtures/: __init__.py  development.py  production.py  testing.py
backend/nexctf/model/: __init__.py  base.py  challenge.py  config.py  custom_field.py  event.py  file.py  hint_unlock.py  link.py  notification.py  oauth.py  oauth_server.py  page.py  question.py  scheduler.py  solution.py  submission.py  tag.py  user.py
backend/nexctf/module/: audit.py  events.py  notification.py  scheduler.py  submission.py
backend/nexctf/module/challenge/: __init__.py  cache.py  compute.py
backend/nexctf/module/info/: __init__.py  cache.py  version.py
backend/nexctf/module/scoreboard/: __init__.py  cache.py  compute.py
backend/nexctf/module/stats/: __init__.py  cache.py  compute.py
backend/nexctf/plugins/: __init__.py  config.py  frontend.py  loader.py  registry.py  routes.py  testing.py
backend/nexctf/plugins/builtin/challenge/: __init__.py  pyproject.toml
backend/nexctf/plugins/builtin/challenge/standard/: model.py  schema.py
backend/nexctf/plugins/builtin/solution/: __init__.py  pyproject.toml
backend/nexctf/plugins/builtin/solution/match/: model.py  schema.py
backend/nexctf/plugins/builtin/solution/mcq/: model.py  schema.py
backend/nexctf/plugins/builtin/solution/regex/: model.py  schema.py
backend/nexctf/schema/: __init__.py  category.py  challenge.py  config.py  custom_field.py  email.py  event.py  file.py  hint.py  info.py  link.py  notification.py  oauth.py  oauth_server.py  page.py  plugin.py  question.py  scheduler.py  score_adjustment.py  scoreboard.py  solution.py  stats.py  submission.py  tag.py  team.py  user.py
backend/nexctf/util/: async_utils.py  datetime.py  ip.py  pydantic.py
backend/plugins_store/nexctf_orchestrator/: __init__.py  model.py  pyproject.toml  schema.py
backend/plugins_store/nexctf_orchestrator/alembic/versions/: 0001_init_orchestrator.py
backend/plugins_store/nexctf_orchestrator/api/: __init__.py  orchestrator.py
backend/plugins_store/nexctf_orchestrator/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/plugins_store/nexctf_orchestrator/frontend/src/: ChallengePanel.tsx  index.ts  main.tsx  sdk.ts
backend/plugins_store/nexctf_orchestrator/module/: fake_orchestrator.py  orchestrator.py
backend/plugins_store/nexctf_sandbox/: __init__.py  _sandbox.py  pyproject.toml
backend/plugins_store/nexctf_sandbox/alembic/versions/: 0001_init_sandbox.py
backend/plugins_store/nexctf_sandbox/solutions/: runner.py  script.py
backend/plugins_store/nexctf_sandbox/tests/: conftest.py  test_runner.py  test_script.py
backend/scripts/: run_plugin_migration.py  start.sh
backend/scripts/plugin_alembic/: env.py
backend/tests/: base.py  conftest.py  test_cli.py
backend/tests/api/: test_admin_category.py  test_admin_email.py  test_admin_oauth_client.py  test_admin_oauth_provider.py  test_admin_tag.py  test_admin_team.py  test_admin_user.py  test_auth.py  test_auth_email.py  test_challenge.py  test_oauth_server.py  test_scoreboard.py
backend/tests/core/: conftest.py  test_cache.py  test_email.py  test_email_render.py  test_rate_limit.py  test_s3.py
backend/tests/module/: test_scoreboard.py  test_version.py
backend/tests/plugins/: test_loader.py  test_registries.py  test_solution_regex.py  test_testing.py
backend/tests/util/: test_async_utils.py  test_ip.py
docker/: Dockerfile  supervisord.conf  with-prefix.sh
frontend/: biome.json  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: admin-links-nav.tsx  bracket-select.tsx  custom-field-input.tsx  custom-field-values-list.tsx  data-table.tsx  detail-page.tsx  id-cell.tsx  language-switcher.tsx  links-form-section.tsx  markdown.tsx  notification-popover.tsx  notification-toast-listener.tsx  plugin-slot.tsx  resend-verification-form.tsx  scheduler-status.tsx  schema-form.tsx  set-custom-field-value-dialog.tsx  stat-card.tsx  tag-badge.tsx  tag-multi-select.tsx  team-multi-select.tsx  team-single-select.tsx  theme-toggle.tsx
frontend/src/hooks/: use-captcha.ts  use-magic-vars.ts  use-sse-event.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts  auth.tsx  branding.tsx  magic-vars.ts  plugins.ts  sse.ts  theme.tsx  use-event-ended.ts  use-team-search.ts  utils.ts
(+51 files in other folders)
