[project]
name = "nexctf"
version = "0.3.0"
description = "Add your description here"
authors = [
    { name = "d3vyce", email = "nicolas.sudres@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=23.1.0",
    "fastapi-multiauth[oauth]>=0.1.0",
    "fastapi-toolsets[all]==5.0.0b2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "aioboto3>=13.0.0",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "pyotp>=2.10.0",
    "regex>=2026.5.9",
    "aiosmtplib>=3.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "nexctf"
module-root = ""

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydantic-to-typescript>=2.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]


[tool.fastapi-toolsets]
custom_cli = "nexctf.cli:cli"
fixtures = "nexctf.fixtures:fixture_registry"
db_context = "nexctf.core.db:get_db_context"

[tool.ty.src]
exclude = ["plugins_store/nexctf_sandbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
