[project]
name = "nexctf-sandbox"
version = "0.1.0"
description = "Sandboxed code execution for NexCTF — script checker and code runner via microsandbox microVMs."
authors = [{ name = "NexCTF" }]
dependencies = ["microsandbox>=0.5.3"]

[project.urls]
Repository = "https://github.com/NexCTF/sandbox"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]

[project.entry-points."nexctf.plugins"]
nexctf_sandbox = "nexctf_sandbox"

[tool.nexctf]
display_name = "Sandbox"

[tool.nexctf.migrations]
version_table = "alembic_version_nexctf_sandbox"
models = ["nexctf_sandbox.solutions.runner", "nexctf_sandbox.solutions.script"]

[tool.setuptools.packages.find]
where = [".."]
include = ["nexctf_sandbox*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
